styles.css
#gridContainer{
    display: flex;
    flex-wrap: wrap;
    border: solid 1px black;
    margin-left: auto;
    margin-right: auto;

}

#resetButton{
    display: block;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 20px;
}

#colorButtonContainers{
    display: flex;
    flex-direction: row;
    justify-content: space-between;

}

#rainbowButton{
    display: flex;
    align-items: center;
}

.hoveredEffect{
    background-color: black;
}

